adding contact section. Not finished yet

--- a/index.html
+++ b/index.html
@@ -38,27 +38,54 @@
         <div class='work'><img src="assets/img/test-image.jpg" /></div>
         <div class='work'><img src="assets/img/test-image.jpg" /></div>
       </div>
+    </div>
 
-      <div class='about'>
+    <div class='about'>
         <div class = 'about_container'>
           <div class = 'left'>
             <div class='title'></div>
             <p>I’m Lindsay Mindler! An Interactive Designer/Developer working &amp; living in Charlotte, NC for MODE. I graduating from Rochester Institute of Technology in 2009, with my BFA in New Media Design &amp; Development and have a passion for everything mobile or touch-screen based. I’ve been fortunate enough to work for companies such as Odopod, Hunt &amp; Gather, IBM, and BEAM.</p>
+            <div class='button'><a href='#'></a></div>
           </div>
           <div class = 'right'>
-            <div>
-              <div class = 'rit'></div>
+            <div><div class = 'rit'></div></div>
+            <div><div class = 'years'></div></div>
+            <div><div class = 'location'></div></div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+      <div class='contact'>
+        <div class='contact_container'>
+          <div class='title'></div>
+
+          <div class='email_container'>
+            <p>Connect with me at any of the networks below, or email me at</p>
+            <div class='button'><a href='#'></a></div>
+          </div>
+          <div class='divider'></div>
+
+           <div class='social_container'>
+            <div class='top'>
+              <div><div class = 'twitter'></div></div>
+              <div><div class = 'facebook'></div></div>
+              <div><div class = 'dribbble'></div></div>
+              <div><div class = 'pinterest'></div></div>
+              <div><div class = 'tumblr'></div></div>
             </div>
-            <div>
-              <div class = 'years'></div>
-            </div>
-            <div>
-              <div class = 'location'></div>
+            <div class='bottom'>
+              <div><div class = 'klout'></div></div>
+              <div><div class = 'linkedin'></div></div>
+              <div><div class = 'foursquare'></div></div>
+              <div><div class = 'google'></div></div>
+              <div><div class = 'spotify'></div></div>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
 </body>
 </html>
