--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
   <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="assets/css/home.css" />
 
 <!--
   <script src="../../src/js/hover.js" type="text/javascript"></script>
@@ -26,66 +27,80 @@
 
   <header>
     <div class='logo'><a href="#"></a></div>
-    <nav></nav>
+    <div class='nav_container'>
+      <nav>
+        <div id='home'><a href='#'></a></div>
+        <div id='work'><a href='#'></a></div>
+        <div id='about'><a href='#'></a></div>
+        <div id='contact'><a href='#'></a></div>
+      </nav>
+    </div>
   </header>
 
 
-    <div class ='container'>
-      <div class='intro'></div>
+  <div class ='container'>
+    <div class='intro'></div>
 
-      <div class='works'>
-        <div class='work'><img src="assets/img/test-image.jpg" /></div>
-        <div class='work'><img src="assets/img/test-image.jpg" /></div>
-        <div class='work'><img src="assets/img/test-image.jpg" /></div>
+    <div class='works'>
+      <div class='work'><img src="assets/img/test-image.jpg" /></div>
+      <div class='work'><img src="assets/img/test-image.jpg" /></div>
+      <div class='work'><img src="assets/img/test-image.jpg" /></div>
+    </div>
+  </div>
+
+  <div class='about'>
+      <div class = 'about_container'>
+        <div class = 'left'>
+          <div class='title'></div>
+          <p>I’m Lindsay Mindler! An Interactive Designer/Developer working &amp; living in Charlotte, NC for MODE. I graduating from Rochester Institute of Technology in 2009, with my BFA in New Media Design &amp; Development and have a passion for everything mobile or touch-screen based. I’ve been fortunate enough to work for companies such as Odopod, Hunt &amp; Gather, IBM, and BEAM.</p>
+          <div class='button'><a href='#'></a></div>
+        </div>
+        <div class = 'right'>
+          <div><div class = 'rit'></div></div>
+          <div><div class = 'years'></div></div>
+          <div><div class = 'location'></div></div>
+        </div>
       </div>
     </div>
 
-    <div class='about'>
-        <div class = 'about_container'>
-          <div class = 'left'>
-            <div class='title'></div>
-            <p>I’m Lindsay Mindler! An Interactive Designer/Developer working &amp; living in Charlotte, NC for MODE. I graduating from Rochester Institute of Technology in 2009, with my BFA in New Media Design &amp; Development and have a passion for everything mobile or touch-screen based. I’ve been fortunate enough to work for companies such as Odopod, Hunt &amp; Gather, IBM, and BEAM.</p>
-            <div class='button'><a href='#'></a></div>
-          </div>
-          <div class = 'right'>
-            <div><div class = 'rit'></div></div>
-            <div><div class = 'years'></div></div>
-            <div><div class = 'location'></div></div>
-          </div>
+
+
+
+    <div class='contact'>
+      <div class='contact_container'>
+        <div class='title'></div>
+
+        <div class='email_container'>
+          <p>Connect with me at any of the networks below, or email me at</p>
+          <div class='button'><a href='#'></a></div>
         </div>
-      </div>
+
+        <div class='divider'></div>
 
 
 
-
-      <div class='contact'>
-        <div class='contact_container'>
-          <div class='title'></div>
-
-          <div class='email_container'>
-            <p>Connect with me at any of the networks below, or email me at</p>
-            <div class='button'><a href='#'></a></div>
+         <div class='social_container'>
+          <div class='top'>
+            <div><div class = 'twitter'><a href='http://twitter.com/LMindler' target='_blank'></a></div></div>
+            <div><div class = 'facebook'><a href='https://www.facebook.com/lmindler' target='_blank'></a></div></div>
+            <div><div class = 'dribbble'><a href='http://dribbble.com/lindsaymindler' target='_blank'></a></div></div>
+            <div><div class = 'pinterest'><a href='http://pinterest.com/lmindler/' target='_blank'></a></div></div>
+            <div><div class = 'tumblr'><a href='http://lburtner.tumblr.com/' target='_blank'></a></div></div>
           </div>
           <div class='divider'></div>
-
-           <div class='social_container'>
-            <div class='top'>
-              <div><div class = 'twitter'></div></div>
-              <div><div class = 'facebook'></div></div>
-              <div><div class = 'dribbble'></div></div>
-              <div><div class = 'pinterest'></div></div>
-              <div><div class = 'tumblr'></div></div>
-            </div>
-            <div class='bottom'>
-              <div><div class = 'klout'></div></div>
-              <div><div class = 'linkedin'></div></div>
-              <div><div class = 'foursquare'></div></div>
-              <div><div class = 'google'></div></div>
-              <div><div class = 'spotify'></div></div>
-            </div>
+          <div class='bottom'>
+            <div><div class = 'klout'><a href='http://klout.com/#/LMindler/' target='_blank'></a></div></div>
+            <div><div class = 'linkedin'><a href='http://www.linkedin.com/in/lindsaymindler' target='_blank'></a></div></div>
+            <div><div class = 'foursquare'><a href='https://foursquare.com/lburtner' target='_blank'></a></div></div>
+            <div><div class = 'google'><a href='https://plus.google.com/108450164907738973168' target='_blank'></a></div></div>
+            <div><div class = 'spotify'><a href='http://open.spotify.com/user/lmindler' target='_blank'></a></div></div>
           </div>
         </div>
       </div>
+    </div>
+
+
+    <footer><div class='footer_container'><p>© LINDSAY MINDLER 2012</p></div></footer>
 
 </body>
 </html>
