--- a/index.html
+++ b/index.html
@@ -42,9 +42,21 @@
     <div class='intro'></div>
 
     <div class='works'>
-      <div class='work'><img src="assets/img/test-image.jpg" /></div>
-      <div class='work'><img src="assets/img/test-image.jpg" /></div>
-      <div class='work'><img src="assets/img/test-image.jpg" /></div>
+      <div class='work'><a href='#'><img src="assets/img/home/work_mizuno.jpg" /></a></div>
+      <div class='work'><a href='#'><img src="assets/img/home/work_fftc.jpg" /></a></div>
+      <div class='work'><a href='#'><img src="assets/img/home/work_boars-head.jpg" /></a></div>
+      <div class='work'><a href='#'><img src="assets/img/home/work_playstation.jpg" /></a></div>
+      <div class='work'><a href='#'><img src="assets/img/home/work_bravia.jpg" /></a></div>
+      <div class='work'><a href='#'><img src="assets/img/home/work_odosketch.jpg" /></a></div>
+      <div class='work'><a href='#'><img src="assets/img/home/work_ps-intranet.jpg" /></a></div>
+      <div class='work'><a href='#'><img src="assets/img/home/work_kodowa.jpg" /></a></div>
+      <div class='work'><a href='#'><img src="assets/img/home/work_donq.jpg" /></a></div>
+      <div class='work'><a href='#'><img src="assets/img/home/work_checkers.jpg" /></a></div>
+      <div class='work'><a href='#'><img src="assets/img/home/work_fry-love.jpg" /></a></div>
+      <div class='work'><a href='#'><img src="assets/img/home/work_csg.jpg" /></a></div>
+      <div class='work'><a href='#'><img src="assets/img/home/work_flower-city.jpg" /></a></div>
+      <div class='work'><a href='#'><img src="assets/img/home/work_fox.jpg" /></a></div>
+
     </div>
   </div>
 
